--- a/src/layouts/Authors.astro
+++ b/src/layouts/Authors.astro
@@ -1,14 +1,18 @@
 ---
 import { markdownify } from "@/lib/utils/textConverter";
 import { Image } from "astro:assets";
+import type { CollectionEntry } from "astro:content";
 import { BsArrowRightCircle } from "react-icons/bs";
-import type { TAuthor } from "@/types";
+
+type Props = {
+  authors: CollectionEntry<"authors">[];
+};
 const { authors } = Astro.props;
 ---
 
 <div class="row justify-center">
   {
-    authors.map((author: TAuthor) => (
+    authors.map((author) => (
       <div class="col-12 mb-8 sm:col-6 md:col-4">
         {author.data.image && (
           <div class="mb-4">
@@ -23,15 +27,18 @@ const { authors } = Astro.props;
         )}
         <h3 class="h4 mt-8 mb-3">
           <a
-            href={`/authors/${author.slug}`}
+            href={`/authors/${author.id}`}
             class="block hover:text-primary transition duration-200"
           >
             {author.data.title}
           </a>
         </h3>
-        <p class="mb-3" set:text={markdownify(author.body.slice(0, 100))} />
+        {author.body && (
+          <p class="mb-3" set:text={markdownify(author.body.slice(0, 100))} />
+        )}
+
         <a
-          href={`/authors/${author.slug}`}
+          href={`/authors/${author.id}`}
           class="inline-flex items-center text-primary transition duration-200 hover:opacity-70"
         >
           Read More <BsArrowRightCircle className="inline ml-2" />
