--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,10 +2,11 @@
 import config from "@/config/config.json";
 import Base from "@/layouts/Base.astro";
 import { markdownify } from "@/lib/utils/textConverter";
-import { getEntryBySlug } from "astro:content";
+import type { CollectionEntry } from "astro:content";
+import { getEntry } from "astro:content";
 import { FaAddressCard, FaEnvelope, FaPhoneAlt } from "react-icons/fa";
 
-const entry = await getEntryBySlug("pages", "contact");
+const entry = (await getEntry("pages", "contact")) as CollectionEntry<"pages">;
 const { contact_form_action } = config.params;
 const { address, email, phone } = config.contactinfo;
 const { title, description, meta_title, image } = entry.data;
@@ -36,7 +37,10 @@ const { title, description, meta_title, image } = entry.data;
                 <FaEnvelope className="mr-3 text-primary" />
                 <p class="font-semibold">Email</p>
               </div>
-              <p set:html={markdownify(email)} class="mt-2 leading-5 pl-8 content" />
+              <p
+                set:html={markdownify(email)}
+                class="mt-2 leading-5 pl-8 content"
+              />
             </li>
             <li>
               <div class="flex text-theme-dark items-center text-xl">
@@ -48,25 +52,41 @@ const { title, description, meta_title, image } = entry.data;
           </ul>
         </div>
         <div class="sm:col-7 md:col-8">
-          <form class="contact-form row gy-2 justify-center" method="POST" action={contact_form_action}>
+          <form
+            class="contact-form row gy-2 justify-center"
+            method="POST"
+            action={contact_form_action}
+          >
             <div class="lg:col-6">
-              <label class="mb-2 block" for="name">Name <span class="text-red-600">*</span></label>
-              <input class="form-input w-full" name="name" type="text" required />
-            </div>
-            <div class="lg:col-6">
-              <label class="mb-2 block" for="email">Email <span class="text-red-600">*</span></label>
-              <input class="form-input w-full" name="email" type="email" required />
-            </div>
-            <div class="col-12">
-              <label class="mb-2 block" for="subject">Subject</label>
+              <label class="mb-2 block" for="name"
+                >Name <span class="text-red-600">*</span></label
+              >
               <input
                 class="form-input w-full"
-                name="subject"
+                name="name"
                 type="text"
+                required
+              />
+            </div>
+            <div class="lg:col-6">
+              <label class="mb-2 block" for="email"
+                >Email <span class="text-red-600">*</span></label
+              >
+              <input
+                class="form-input w-full"
+                name="email"
+                type="email"
+                required
               />
             </div>
             <div class="col-12">
-              <label class="mb-2 block" for="message">Message <span class="text-red-600">*</span></label>
+              <label class="mb-2 block" for="subject">Subject</label>
+              <input class="form-input w-full" name="subject" type="text" />
+            </div>
+            <div class="col-12">
+              <label class="mb-2 block" for="message"
+                >Message <span class="text-red-600">*</span></label
+              >
               <textarea class="form-textarea w-full" rows="4"></textarea>
             </div>
             <div class="col-12">
