--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -7,8 +7,8 @@ import { getSinglePage } from "@/lib/contentParser.astro";
 const posts = await getSinglePage("posts");
 
 // List of items to search in
-const searchList = posts.map((item: any) => ({
-  slug: item.slug,
+const searchList = posts.map((item) => ({
+  slug: item.id,
   data: item.data,
   content: item.body,
 }));
