--- a/src/layouts/components/SimilarPosts.astro
+++ b/src/layouts/components/SimilarPosts.astro
@@ -1,18 +1,23 @@
 ---
-import { Image } from "astro:assets";
 import dateFormat from "@/lib/utils/dateFormat";
 import { humanize, slugify } from "@/lib/utils/textConverter";
+import { Image } from "astro:assets";
+import type { CollectionEntry } from "astro:content";
 import { BiCalendarEdit, BiCategoryAlt } from "react-icons/bi";
+
+type Props = {
+  posts: CollectionEntry<"posts">[];
+};
 const { posts } = Astro.props;
 ---
 
 <div class="row gy-4 justify-center">
   {
-    posts.map((post: any, i: number) => (
+    posts.map((post, i: number) => (
       <div class={`col-12 sm:col-6 md:col-4 ${i === 2 && "hidden md:block"}`}>
         {post.data.image && (
           <a
-            href={`/${post.slug}`}
+            href={`/${post.id}`}
             class="rounded-lg block hover:text-primary overflow-hidden group"
           >
             <Image
@@ -27,30 +32,29 @@ const { posts } = Astro.props;
         <ul class="mt-4 text-text flex flex-wrap items-center text-sm">
           <li class="mb-2 mr-4 flex items-center flex-wrap font-medium">
             <BiCalendarEdit className="mr-1 h-[16px] w-[16px] text-gray-600" />
-            <>{dateFormat(post.data.date)}</>
+            {dateFormat(post.data.date!)}
           </li>
           <li class="mb-2 mr-4 flex items-center flex-wrap">
             <BiCategoryAlt className="mr-1 h-[16px] w-[16px] text-gray-600" />
-            <>
-              <ul>
-                {post.data.categories.map((category: string, i: number) => (
-                  <li class="inline-block">
-                    <a
-                      href={`/categories/${slugify(category)}`}
-                      class="mr-2 hover:text-primary font-medium"
-                    >
-                      {humanize(category)}
-                      {i !== post.data.categories.length - 1 && ","}
-                    </a>
-                  </li>
-                ))}
-              </ul>
-            </>
+
+            <ul>
+              {post.data.categories.map((category: string, i: number) => (
+                <li class="inline-block">
+                  <a
+                    href={`/categories/${slugify(category)}`}
+                    class="mr-2 hover:text-primary font-medium"
+                  >
+                    {humanize(category)}
+                    {i !== post.data.categories.length - 1 && ","}
+                  </a>
+                </li>
+              ))}
+            </ul>
           </li>
         </ul>
         <h3 class="h5">
           <a
-            href={`/${post.slug}`}
+            href={`/${post.id}`}
             class="block hover:text-primary transition duration-300"
           >
             {post.data.title}
