--- a/src/pages/authors/[single].astro
+++ b/src/pages/authors/[single].astro
@@ -1,20 +1,21 @@
 ---
-import { Image } from "astro:assets";
 import AuthorSingle from "@/layouts/AuthorSingle.astro";
 import Base from "@/layouts/Base.astro";
 import { getSinglePage } from "@/lib/contentParser.astro";
 import dateFormat from "@/lib/utils/dateFormat";
+import { Image } from "astro:assets";
 
 import { sortByDate } from "@/lib/utils/sortFunctions";
 import { humanize, slugify } from "@/lib/utils/textConverter";
+import type { CollectionEntry } from "astro:content";
 import { BiCalendarEdit, BiCategoryAlt } from "react-icons/bi";
 
 export async function getStaticPaths() {
   const authors = await getSinglePage("authors");
 
-  const paths = authors.map((author: any) => ({
+  const paths = authors.map((author) => ({
     params: {
-      single: author.slug,
+      single: author.id,
     },
     props: { author },
   }));
@@ -26,10 +27,10 @@ const { title, meta_title, description, image } = author.data;
 
 // Author Posts
 const posts = await getSinglePage("posts");
-const sortPostsByDate = sortByDate(posts);
+const sortPostsByDate: CollectionEntry<"posts">[] = sortByDate(posts);
 const currentPosts = sortPostsByDate.filter((post) => {
   return post.data.authors
-    .map((author: string) => slugify(author))
+    .map((author) => slugify(author))
     .includes(slugify(title));
 });
 ---
@@ -50,11 +51,11 @@ const currentPosts = sortPostsByDate.filter((post) => {
           <div
             class={`row gy-4 ${currentPosts.length < 3 ? "justify-center" : ""}`}
           >
-            {currentPosts.map((post: any, i: number) => (
+            {currentPosts.map((post) => (
               <div class="col-12 sm:col-6 lg:col-4">
                 {post.data.image && (
                   <a
-                    href={`/${post.slug}`}
+                    href={`/${post.id}`}
                     class="rounded-lg block hover:text-primary overflow-hidden group"
                   >
                     <Image
@@ -69,32 +70,29 @@ const currentPosts = sortPostsByDate.filter((post) => {
                 <ul class="mt-4 text-text flex flex-wrap items-center text-sm">
                   <li class="mb-2 mr-4 flex items-center flex-wrap font-medium">
                     <BiCalendarEdit className="mr-1 h-[16px] w-[16px] text-gray-600" />
-                    <>{dateFormat(post.data.date)}</>
+                    {dateFormat(post.data.date!)}
                   </li>
                   <li class="mb-2 mr-4 flex items-center flex-wrap">
                     <BiCategoryAlt className="mr-1 h-[16px] w-[16px] text-gray-600" />
-                    <>
-                      <ul>
-                        {post.data.categories.map(
-                          (category: string, i: number) => (
-                            <li class="inline-block">
-                              <a
-                                href={`/categories/${slugify(category)}`}
-                                class="mr-2 hover:text-primary font-medium"
-                              >
-                                {humanize(category)}
-                                {i !== post.data.categories.length - 1 && ","}
-                              </a>
-                            </li>
-                          ),
-                        )}
-                      </ul>
-                    </>
+
+                    <ul>
+                      {post.data.categories.map((category, i: number) => (
+                        <li class="inline-block">
+                          <a
+                            href={`/categories/${slugify(category)}`}
+                            class="mr-2 hover:text-primary font-medium"
+                          >
+                            {humanize(category)}
+                            {i !== post.data.categories.length - 1 && ","}
+                          </a>
+                        </li>
+                      ))}
+                    </ul>
                   </li>
                 </ul>
                 <h3 class="h5">
                   <a
-                    href={`/${post.slug}`}
+                    href={`/${post.id}`}
                     class="block hover:text-primary transition duration-300"
                   >
                     {post.data.title}
