Updated to Tailwind v4

--- a/src/layouts/PostSingle.astro
+++ b/src/layouts/PostSingle.astro
@@ -102,7 +102,7 @@ const { title, description, authors, categories, image, date, tags } =
                 <li class="inline-block">
                   <a
                     href={`/tags/${slugify(tag)}`}
-                    class="block rounded-lg bg-theme-light px-4 py-2 font-semibold text-dark text-sm hover:text-primary transition duration-300"
+                    class="block rounded-lg bg-light px-4 py-2 font-semibold text-dark text-sm hover:text-primary transition duration-300"
                   >
                     #{humanize(tag)}
                   </a>
