--- a/src/layouts/partials/Footer.astro
+++ b/src/layouts/partials/Footer.astro
@@ -6,14 +6,17 @@ import social from "@/config/social.json";
 import { markdownify } from "@/lib/utils/textConverter";
 ---
 
-<footer class="section bg-theme-dark">
+<footer class="section bg-dark">
   <div class="container text-center">
     {/* footer menu */}
     <ul class="mb-8 space-x-4">
       {
         menu.footer.map((menu) => (
           <li class="inline-block">
-            <a href={menu.url} class="p-4 text-white/75 hover:text-white transition-all">
+            <a
+              href={menu.url}
+              class="p-4 text-white/75 hover:text-white transition-all"
+            >
               {menu.name}
             </a>
           </li>
