--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -18,7 +18,7 @@ import { BiCategoryAlt } from "react-icons/bi";
             <li class="inline-block">
               <a
                 href={`/categories/${category}`}
-                class="rounded-lg bg-theme-light px-4 py-2 text-dark transition hover:bg-primary hover:text-white flex items-center group"
+                class="rounded-lg bg-light px-4 py-2 text-dark transition hover:bg-primary hover:text-white flex items-center group"
               >
                 <BiCategoryAlt className="mr-1 text-primary group-hover:text-white transition h-6 w-6 scale-75" />
                 {humanize(category || "")}
