--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,19 +1,17 @@
 ---
 import Base from "@/layouts/Base.astro";
-import { markdownify } from "@/lib/utils/textConverter";
-import type { CollectionEntry } from "astro:content";
-import { getEntry, render } from "astro:content";
-const entry = (await getEntry("pages", "404")) as CollectionEntry<"pages">;
-const { Content } = await render(entry);
 ---
 
-<Base title={entry.data.title}>
+<Base title="Page Not Found">
   <section class="section">
     <div class="container">
       <div class="flex h-[40vh] items-center justify-center">
         <div class="text-center">
-          <h1 class="mb-4" set:html={markdownify(entry.data.title)} />
-          <Content />
+          <h1 class="h2 md:h1 mb-4">Error 404</h1>
+          <div class="content">
+            <p>Page Not Found</p>
+          </div>
+          <a href="/" class="btn btn-primary mt-8">Back to home</a>
         </div>
       </div>
     </div>
