--- a/src/pages/[regular].astro
+++ b/src/pages/[regular].astro
@@ -1,21 +1,15 @@
 ---
 import Base from "@/layouts/Base.astro";
-import Default from "@/layouts/Default.astro";
-import PostSingle from "@/layouts/PostSingle.astro";
 import { getSinglePage } from "@/lib/contentParser.astro";
-import type { CollectionEntry } from "astro:content";
-
-const getPosts = (await getSinglePage("posts")) as CollectionEntry<"posts">[];
-const postsSlug = getPosts.map((item) => item.id);
+import { markdownify } from "@/lib/utils/textConverter";
+import { render } from "astro:content";
 
 export async function getStaticPaths() {
-  const posts = await getSinglePage("posts");
   const pages = await getSinglePage("pages");
-  const allPages = [...pages, ...posts];
 
-  const paths = allPages.map((page) => ({
+  const paths = pages.map((page) => ({
     params: {
-      regular: page.id.replace(/\.(md|mdx)$/, ""),
+      regular: page.slug,
     },
     props: { page },
   }));
@@ -24,6 +18,7 @@ export async function getStaticPaths() {
 
 const { page } = Astro.props;
 const { title, meta_title, description, image } = page.data;
+const { Content } = await render(page);
 ---
 
 <Base
@@ -32,11 +27,12 @@ const { title, meta_title, description, image } = page.data;
   description={description}
   image={image}
 >
-  {
-    postsSlug.includes(page.id) ? (
-      <PostSingle post={page} />
-    ) : (
-      <Default data={page} />
-    )
-  }
+  <section class="section">
+    <div class="container">
+      <h1 set:html={markdownify(title)} class="h2 page-heading" />
+      <div class="content">
+        <Content />
+      </div>
+    </div>
+  </section>
 </Base>
