--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -1,6 +1,6 @@
 ---
+import Authors from "@/components/Authors.astro";
 import config from "@/config/config.json";
-import Authors from "@/layouts/Authors.astro";
 import Base from "@/layouts/Base.astro";
 import Pagination from "@/layouts/components/Pagination.astro";
 import { getSinglePage } from "@/lib/contentParser.astro";
