--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,6 +1,6 @@
 ---
+import SearchBar from "@/helpers/SearchBar";
 import Base from "@/layouts/Base.astro";
-import SearchBar from "@/layouts/SearchBar";
 import { getSinglePage } from "@/lib/contentParser.astro";
 
 // Retrieve all articles
